compiler/src/test/resources/amyc/parser/failing/ClassDefError1.amy
module ClassDef
  case class Foo()
end ClassDef
